[gd_scene load_steps=4 format=3 uid="uid://ctg0v875xohnf"]

[ext_resource type="Script" path="res://area_2d.gd" id="1_cpqty"]
[ext_resource type="Texture2D" uid="uid://dnbpgjbwhuwxv" path="res://Assets/UI/building_point_ICON.png" id="2_4fltv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xnpsg"]
radius = 11.0838

[node name="building_point" type="Area2D"]
collision_layer = 65536
collision_mask = 65536
script = ExtResource("1_cpqty")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4fltv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(5.6, 5.72)
shape = SubResource("CircleShape2D_xnpsg")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
